Version 27 	 2010-08-10 	 Adding pysis version to the footer 
Version 26 	 2010-08-10 	 Testing related changes 
Version 25 	 2010-08-10 	 Minor changes to profile 
Version 24 	 2010-08-10 	 Fixing DoesNotExist bug in scripts/create_users.py 
Version 23 	 2010-08-10 	 Added django_extensions app. Using django to serve media when DEBUG=True 
Version 22 	 2010-08-10 	 Adding favicon support 
Version 21 	 2010-08-10 	 Small changes 
Version 20 	 2010-08-10 	 Lot of internal cleanup 
Version 19 	 2010-08-09 	 Forgot to add GA script to HomePage 
Version 18 	 2010-08-09 	 Added Google Analytics support 
Version 17 	 2010-08-09 	 Changing landing page to profile edit page 
Version 16 	 2010-08-09 	 Chaning PhoneNumber from Int to String 
Version 15 	 2010-08-09 	 Daemonize fcgi 
Version 14 	 2010-08-09 	 Added 400.html 500.html 
Version 13 	 2010-08-09 	 Started using south 
Version 12 	 2010-08-09 	 Temporarily disabled announcements app 
Version 11 	 2010-08-09 	 Changed README 
Version 10 	 2010-08-09 	 Tons of Refactoring. New profile listing and search 
Version 9 	 2010-08-08 	 Added announcement support (courtesy: http://github.com/subsume/django-announcements) 
Version 8 	 2010-08-07 	 Adding Sphinx Documentation Template 
Version 7 	 2010-08-07 	 Lots of new functionality. Tons of Cleanup 
Version 6 	 2010-08-06 	 Added Avatars. Lot of UI changes. General Cleanup 
Version 5 	 2010-08-05 	 Lot of UI improvements 
Version 4 	 2010-08-05 	 Changing the theme to adminiziolite 
Version 3 	 2010-08-05 	 Added working version of profile app 
Version 2 	 2010-08-03 	 Added some goodies 
Version 1 	 2010-08-03 	 Added some goodies 
Version 0 	 2010-08-03 	 Empty Project 