@@ -1,4 +1,4 @@
-from djangosanetesting.cases import UnitTestCase
+from djangosanetesting.cases import UnitTestCase, DatabaseTestCase, HttpTestCase
 
 class TestSample(UnitTestCase):
     def test_true(self):
