@@ -12,13 +12,18 @@ def test():
     # use test settings, not actual settings
     os.environ['DJANGO_SETTINGS_MODULE'] = 'pysis.settings.test_settings'
     os.environ['PYTHONPATH'] = '.:..:%s/apps' %  settings.PROJECT_ROOT
-        
-#    local('pylint ' +
-#          '--reports=n ' +
-#          '--disable=C,R,W ' +
-#          settings.PROJECT_ROOT, capture=False)
 
-    local('nosetests -v -d ' +
+    local('pylint ' +
+          # E1101 is a very useful message. 
+          # But I have to disable it because 
+          # pylint can not understand django's dynamic structure.
+          # Should enable it back when pylint becomes more django friendly in future.
+          '-d E1101 ' + 
+          '--reports=n ' +
+          '--disable=C,R,W ' +
+          settings.PROJECT_ROOT, capture=False)
+
+    local('nosetests -v -d -x ' +
            '--with-doctest ' +
            '--with-django ' +
            '--with-djangoliveserver ' +
@@ -26,18 +31,17 @@ def test():
 
 def deploy(skip_tests='no'):
     if skip_tests != 'yes':
-        test()    
-        
+        test()
+
     master_repo = 'ssh://hg@bitbucket.org/dkmurthy/pysis'
     remote_repo = '/var/www/pysis'
     remote_env = '~/virtualenvs/pysis/bin/'
-        
+
     local('hg push %s' % master_repo, capture=False)
 
     run('hg fetch -R %s %s' % (remote_repo, master_repo))
     run('%s/python %s/manage.py migrate myprofile' % (remote_env, remote_repo))
     run('source %s/activate && %s/scripts/restart_webserver.sh' % (remote_env, remote_repo))
-    
-    
-    
-    
+
+
+
