@@ -1,3 +1,5 @@
+Version 29 	 2010-08-11 	 Disabling L10N so that DATE_INPUT_FORMATS can be used in ModelForm Date Fields 
+Version 28 	 2010-08-10 	 Added Sanity test cases 
 Version 27 	 2010-08-10 	 Adding pysis version to the footer 
 Version 26 	 2010-08-10 	 Testing related changes 
 Version 25 	 2010-08-10 	 Minor changes to profile 
